// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login styled Container should match Snapshot 1`] = `
<div
  className="sc-AxjAm NkkmI"
/>
`;

exports[`login styled ImageContainer should match Snapshot 1`] = `
<div
  className="sc-AxiKw hJSkZa"
/>
`;

exports[`login styled Wrapper should match Snapshot 1`] = `
<styled.div
  disabled={false}
>
  <div
    className="sc-AxirZ hoJedb"
    disabled={false}
  />
</styled.div>
`;

exports[`login styled Wrapper should match Snapshot 2`] = `
<styled.div
  disabled={true}
>
  <div
    className="sc-AxirZ eZfSwa"
    disabled={true}
  />
</styled.div>
`;
